--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,21 @@
-# Configuración de Azure SQL Database
-DB_USER=tu_usuario
-DB_PASSWORD=tu_contraseña
-DB_SERVER=tu-servidor.database.windows.net
-DB_NAME=InspectorDigital
+# ================================================
+# VARIABLES DE ENTORNO - INSPECTOR DIGITAL
+# ================================================
+# Copia este archivo como .env y configura tus valores
 
-# Puerto de la aplicación
+# Base de datos Azure SQL
+DB_USER=creyes_alumno
+DB_PASSWORD=NuevaClave123
+DB_SERVER=inspectordigital1.database.windows.net
+DB_NAME=free-sql-db-2451406
+
+# Seguridad JWT
+# IMPORTANTE: Cambia este valor por uno aleatorio y seguro en producción
+# Puedes generar uno con: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET=inspector-digital-secret-key-2026
+
+# Entorno
+NODE_ENV=development
+
+# Puerto del servidor (opcional)
 PORT=3000
