--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "dependencies": {
     "express": "^4.18.2",
     "mssql": "^9.1.1",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
