--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "inspector-digital",
-  "version": "1.0.0",
-  "description": "Sistema de Gestión de Siniestros - Inspector Digital",
-  "main": "app.js",
+  "version": "2.0.0",
+  "description": "Sistema de Gestión de Siniestros - Inspector Digital (Arquitectura Modular)",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
