--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "author": "IPACEX Titulación",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mssql": "^9.1.1",
-    "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "cookie-parser": "^1.4.6"
+    "mssql": "^9.1.1",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
