--- a/vercel.json
+++ b/vercel.json
@@ -4,16 +4,28 @@
     {
       "src": "api/index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
+    {
+      "src": "/css/(.*)",
+      "dest": "/public/css/$1"
+    },
     {
       "src": "/js/(.*)",
       "dest": "/public/js/$1"
     },
     {
-      "src": "/css/(.*)",
-      "dest": "/public/css/$1"
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/(.*\\.(html|ico|png|jpg|jpeg|gif|svg))",
+      "dest": "/api/index.js"
     },
     {
       "src": "/(.*)",
