--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,9 @@
   ],
   "routes": [
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
       "dest": "/api/index.js"
     }
