--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
   ],
   "routes": [
     {
+      "src": "/(css|js|assets)/(.*)",
+      "dest": "/public/$1/$2"
+    },
+    {
       "handle": "filesystem"
     },
     {
